# rasopus-backend

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: deploy_release.yml
migrations/: 20250114223920_init_database.sql
src/: adapter.rs  config.rs  controller.rs  database.rs  lib.rs  macros.rs  main.rs  model.rs  service.rs
src/adapter/: user.rs
src/config/: database.rs  env.rs  environment.rs  postgres.rs  rasopus.rs  rocket.rs  rocket_overrides.rs  user_service.rs
src/controller/: index.rs  may_fail.rs  may_not_find.rs  setup.rs  test.rs
src/model/: user.rs
src/model/entity/: user.rs
src/model/payload/: setup.rs
src/service/: setup.rs  user.rs
