[package]
name = "rasopus"
version = "0.0.1"
authors = ["Torben Schweren"]
edition = "2021"
rust-version = "1.82.0"
description = "The Rasopus URL shortener backend"
readme = "README.md"
repository = "https://github.com/WaifuSquad/Rasopus-Backend"
license = "MIT"
keywords = ["backend", "url-shortener", "rocket", "rest", "api"]
exclude = [".devcontainer", ".github", ".vscode"]

[profile.release]
debug = false
opt-level = 3
lto = true

[profile.dev]
debug = true
opt-level = 0
lto = false

[dependencies]
okapi = { version = "0.7.0", features = ["impl_json_schema", "preserve_order"] }
rocket = { version = "0.5.1", features = ["json", "secrets"] }
rocket_okapi = { version = "0.9.0", features = ["preserve_order", "secrets", "swagger", "uuid"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
