[package]
name = "rasopus"
version = "0.0.1"
authors = ["Torben Schweren"]
edition = "2024"
rust-version = "1.85.0"
description = "The Rasopus URL shortener backend"
readme = "README.md"
repository = "https://github.com/WaifuSquad/Rasopus-Backend"
license = "MIT"
keywords = ["backend", "url-shortener", "rocket", "rest", "api"]
exclude = [".devcontainer", ".github", ".vscode"]

[profile.release]
debug = false
opt-level = 3
lto = true

[profile.dev]
debug = true
opt-level = 0
lto = false

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
anyhow = "1.0.95"
lum_config = "0.2.0"
okapi = { version = "0.7.0", features = ["impl_json_schema", "preserve_order"] }
rocket = { version = "0.5.1", features = ["json", "secrets"] }
rocket_okapi = { version = "0.9.0", features = ["preserve_order", "secrets", "swagger", "uuid"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-rustls", "postgres", "mysql", "sqlite", "any", "derive", "macros", "migrate", "uuid", "json"] }
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
